# schoollms

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  docker-compose-deploy.yml  docker-compose-kafka.yml  docker-compose-prod.yml  docker-compose.celery-redis.yml  docker-compose.db.yml  docker-compose.yml  env.template  nginx.conf  origin.key  origin.pem  start.sh
services/api/: .dockerignore  .gitignore  Dockerfile  README.md  daphne.service  daphne.socket  data.json  env.template  manage.py  pyproject.toml  pytest.ini  schema.yml  supervisord.conf
services/api/accounts/: admin.py  models.py  serializers.py  tests.py  views.py
services/api/accounts/management/commands/: generate_api_token.py
services/api/accounts/migrations/: 0003_remove_applicationsettings_istwofactorauthenabled_and_more.py
services/api/common/: admin.py  models.py  serializers.py  tasks.py  tests.py
services/api/common/calendar/: app.py  views.py
services/api/common/migrations/: 0002_notes.py  0004_calendarevent_is_reminder_sent_and_more.py  0004_notetag.py  0005_alter_calendarevent_reminder_time.py  0005_alter_notetag_name.py  0006_remove_notetag_notes_notes_tag.py  0007_alter_notes_tag_delete_notetag.py  0008_merge_20241029_2219.py
services/api/common/notes/: app.py  services.py  views.py
services/api/common/notifications/: views.py
services/api/common/socials/: app.py  consumers.py  models.py  routing.py  serializers.py  services.py  views.py
services/api/common/socials/migrations/: 0001_initial.py
services/api/common/websocket_app/: apps.py  consumers.py  routing.py
services/api/config/: asgi.py  celery.py  urls.py  wsgi.py
services/api/config/settings/: base.py  dev.py  prod.py  test.py
services/api/courses/: admin.py  urls.py  views.py
services/api/courses/attendance/: app.py  models.py  serializers.py  services.py  views.py
services/api/courses/attendance/migrations/: 0001_initial.py
services/api/courses/migrations/: 0001_initial.py
services/api/courses/subjects/: app.py  models.py  serializers.py  views.py
services/api/courses/subjects/migrations/: 0005_assignment_assignmentfile_textassigemntquestion_and_more.py  0006_assignment_questions.py  0010_assignment_is_visible_alter_assignmentfile_file.py  0012_alter_assignmentfile_file.py  (+1 more)
services/api/students/: models.py  tests.py  views.py
services/api/students/migrations/: 0001_initial.py  0003_alter_student_gender.py  0006_remove_student_city_remove_student_country_and_more.py
services/api/students/services/: add_student.py  read_csv.py  student_detail.py
services/api/teachers/: models.py  tests.py  views.py
services/api/teachers/migrations/: 0001_initial.py  0005_remove_teacher_id_alter_teacher_gender_and_more.py  0006_alter_teacher_gender.py  0007_alter_teacher_gender.py  0008_alter_teacher_gender.py  0010_alter_teacher_gender.py  0011_alter_teacher_gender.py  0014_alter_teacher_gender.py  0015_alter_teacher_gender.py  0016_remove_teacher_address_remove_teacher_phone.py
services/api/teachers/services/: creaet_teacher.py  read_csv.py
services/api/utils/: pdf_generator.py
(+1143 files in other folders)
